# automationfile

./: README.md  pyproject.toml
src/fileautomation/: __init__.py  __main__.py  fileautomation.py
