[project]
name = "FileAutomation"
version = "0.1"
# dependencies = []

# [project.optional-dependencies]
# dev = [

# ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fileautomation = "fileautomation.fileautomation:main"

# [project.gui-scripts]
# fileautomation = "fileautmation.fileautomation:main"
