[project]
name = "FileAutomation"
description = "python project for organizing a files directory in Windows"
version = "0.1.0"
authors = [
    { name = "Sergio Garnica", email = "sgarnica1902@gmail.com" }
]
dependencies = []

# [project.optional-dependencies]
# dev = [

# ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fileautomation = "fileautomation.fileautomation:main"

[project.gui-scripts]
fileautomation = "fileautomation.fileautomation:main"